Type casting from InternalLectureMaterial to LectureMaterial and saving InternalMaterialController state to config tests passing

--- a/mypy.ini
+++ b/mypy.ini
@@ -31,6 +31,9 @@ warn_return_any = False
 [mypy-blake3]
 ignore_missing_imports = True
 
+[mypy-jsonpickle]
+ignore_missing_imports = True
+
 # Ignore type errors that are made by betterproto-python
 [mypy-evalquiz_proto.shared.generated.*]
 ignore_errors = True
