--- a/mypy.ini
+++ b/mypy.ini
@@ -34,6 +34,9 @@ ignore_missing_imports = True
 [mypy-jsonpickle]
 ignore_missing_imports = True
 
+[mypy-apscheduler]
+ignore_missing_imports = True
+
 # Ignore type errors that are made by betterproto-python
 [mypy-evalquiz_proto.shared.generated.*]
 ignore_errors = True
