Ignore Sphinx theme missing typing

--- a/mypy.ini
+++ b/mypy.ini
@@ -37,6 +37,9 @@ ignore_missing_imports = True
 [mypy-apscheduler]
 ignore_missing_imports = True
 
+[mypy-sphinx_rtd_theme]
+ignore_missing_imports = True
+
 # Ignore type errors that are made by betterproto-python
 [mypy-evalquiz_proto.shared.generated.*]
 ignore_errors = True
