--- a/mypy.ini
+++ b/mypy.ini
@@ -40,6 +40,12 @@ ignore_missing_imports = True
 [mypy-jsonpickle]
 ignore_missing_imports = True
 
+[mypy-datasets]
+ignore_missing_imports = True
+
+[mypy-pypandoc]
+ignore_missing_imports = True
+
 [mypy-sphinx_rtd_theme]
 ignore_missing_imports = True
 
