Support for multiple evaluations per Question

--- a/mypy.ini
+++ b/mypy.ini
@@ -14,7 +14,7 @@ check_untyped_defs = True
 # These shouldn't be too much additional work, but may be tricky to
 # get passing if you use a lot of untyped libraries
 disallow_subclassing_any = True
-disallow_untyped_decorators = True
+disallow_untyped_decorators = False
 disallow_any_generics = True
 
 # These next few are various gradations of forcing use of type annotations
@@ -40,10 +40,13 @@ ignore_missing_imports = True
 [mypy-jsonpickle]
 ignore_missing_imports = True
 
+[mypy-pypandoc]
+ignore_missing_imports = True
+
 [mypy-datasets]
 ignore_missing_imports = True
 
-[mypy-pypandoc]
+[mypy-cs]
 ignore_missing_imports = True
 
 [mypy-sphinx_rtd_theme]
