--- a/mypy.ini
+++ b/mypy.ini
@@ -49,6 +49,9 @@ ignore_missing_imports = True
 [mypy-cs]
 ignore_missing_imports = True
 
+[mypy-wtforms]
+ignore_missing_imports = True
+
 [mypy-sphinx_rtd_theme]
 ignore_missing_imports = True
 
